assets/css/styles.css
:root {
    --primary-color: #6a6b83;
    --secondary-color: #ccd6eb;
    --tertiary-color: #001730;
}

* {
    margin: 0;
    padding: 0;
    box-sizing:content-box;
}

body {
    color: var(--tertiary-color);
    font-family: Helvetica, Arial, Sans-serif;
}

/* Header Styling*/
header {
    background-color: var(--primary-color);
    display:flex;
    justify-content: space-between;
    flex-wrap:wrap;
    padding: 20px 35px;
    z-index: 9999;
    position: static;
}

header h1 {
    font-weight: bold;
    font-size: 36px;
    padding: 10px 25px;
    color: var(--tertiary-color);
    background-color: var(--secondary-color);
    margin: 0 -34px;
}

header h1 a {
    display:flex;
    margin: 0 -20px 0 30px;
}

header a {
    color: var(--tertiary-color);
    text-decoration: none;
}

header nav {
    margin: 7px 0;
}

header nav ul {
    display: flex;
    justify-content: space-between;
    flex-wrap:wrap;
    align-items: center;
    list-style: none;
}

header nav ul li a {
    padding: 10px 30px;
    font-size: 1.2vw;
    border-bottom: solid 5px;
    margin: 0 10px;
}

header nav ul li a:hover {
    background: var(--secondary-color);
    color: var(--tertiary-color);
    text-shadow: none;
}
/*End of Header*/

/* Hero Section*/
.hero {
    background-image: url("../images/hero-img.jpg");
    background-size: cover;
    background-attachment: fixed;
    background-position: 0 -650px;
    height: 200px;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;
    justify-content: flex-end;
    padding: 20px 100px;
}

.hero div {
    background-color: var(--secondary-color);
    width: 210px;
    text-align: center;
}

.hero-name {
    text-align: right;
    padding: 10px;
}
/* Hero End*/

/* General purpose styles*/
section {
    padding-top: 2%;
    flex-wrap:wrap;
}
section h3 {
    width: 25%;
    display:flex;
    justify-content: flex-end;
    text-align: right;
    font-size: 48px;
    color: var(--primary-color);
    padding-right: 1%;
}

.size {
    width: 65%;
    flex-wrap:wrap;
}

.flex-row{
    display:flex;
}

/* End of general*/

/* About me section*/
.about p {
    line-height: 1.5;
    color: var(--tertiary-color);
    width: 90%;
    font-size: 20px;
    padding: 0 3%;
    border-left: 6px solid var(--tertiary-color);
}
/* end of about me*/

/* Work/Project section */
.projects {
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
}

.example {
    flex-wrap:wrap;
    justify-content: flex-start;
    border-left: 6px solid var(--tertiary-color);
    padding: 0 3%;
    flex-direction: column;

}

.project-title {
    align-items: flex-end;
    background-color: var(--primary-color);
    text-align: left;
    padding: 10px;
    color: var(--secondary-color);
    margin-bottom: 25%;
}
.set-up{
    align-items: flex-end;
}

article {
    display:flex;
    width: 80%;
    padding: 1% 0;
    height: 10%;
}
article img {
    width: 50%;
    border: 6px solid var(--primary-color);
    opacity: 0.5;
}

article img:hover {
    opacity: 1;
}
/* end of work*/

/* contact section/footer */

.info nav {
    border-left: 6px solid var(--tertiary-color);
    justify-content: space-evenly;
}

.info nav ul {
    display: flex;
    justify-content: space-between;
    flex-wrap:wrap;
    align-items: center;
    list-style: none;
    width: 90%;
}

.info nav ul li a {
    padding: 10px 30px;
    font-size: 1.0vw;
    border-bottom: solid 5px;
    margin: 0 10px;
    text-decoration: none;
    color: var(--tertiary-color)
}
/* end of contact*/

/* MEDIA QUERY for smaller desktop screens*/
@media screen and (max-width: 980px){
}

/* MEDIA QUERY for Tablets and smaller*/
@media screen and (max-width: 768px) {
}

/* MEDIA QUERY for mobile phones and smaller*/
@media screen and (max-width: 575px) {
}

